fix(scrollbar): fix scrollbar styles

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -42,3 +42,28 @@ main {
     padding: 0.5rem 1.75rem;
   }
 }
+
+::-webkit-scrollbar {
+  width: 4px;
+  height: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #e0e0e1;
+  border-right: 0 solid #e0e0e1;
+  background-clip: padding-box;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f8f8f8;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
+
+::-webkit-scrollbar-button {
+  display: none;
+}
